# neko

./: README.md  pyproject.toml
.github/workflows/: ci.yml
neko/: __init__.py
tests/: test_neko.py
